--- a/npkpir_23/web/ksiegowaFK/sub/dialog/ewidencjavat/ewidencje.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/ewidencjavat/ewidencje.xhtml
@@ -8,7 +8,7 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     
-    <p:tab title="ewidencje">
+    <p:tab title="ewidencje" >
         <p:tabView id="akordeon2" value="#{ewidencjaVatView.ewidencjeFK}" binding="#{ewidencjaVatView.iTabPanel}"  var="item">
             <p:ajax event="tabChange" listener="#{ewidencjaVatView.wybranewierszeewidencjiczysc}" global="false"/>
             <p:tab title="#{item[0].nazwaewidencji.nazwa}">
@@ -34,7 +34,7 @@
                                 actionListener="#{dokfkView.przygotujDokumentEdycjaEFK(item,ewidencjaVatView.zachowanewybranewierszeewidencji, ewidencjaVatView.iTabPanel)}" 
                                 />
                 </p:contextMenu>
-                <p:dataTable lazy="false"  id="tabela" value="#{item}" var="itemik" style="width: 1250px; margin-bottom: 30px; height: 500px; overflow-y: scroll;"
+                <p:dataTable lazy="false"  id="tabela" value="#{item}" var="itemik" style="margin-bottom: 30px; height: 500px; overflow-y: scroll;"
                              rowKey="#{itemik.hashCode()}" selection="#{ewidencjaVatView.wybranewierszeewidencji}" rowSelectMode="add"
                              filteredValue="#{ewidencjaVatView.filteredwierszeewidencji}"  
                              rowIndexVar="index2"  styleClass="walkingtable" >
@@ -93,6 +93,12 @@
                     <p:column headerText="WNT" style="width: 40px;text-align: center;" sortBy="#{itemik.duplikat}" filterBy="#{itemik.duplikat}"
                               rendered="#{item[0].nazwaewidencji.nazwa eq 'zakup'}">
                         <h:outputText value="#{itemik.duplikat eq true ? 'duplikat' : null}"/>
+                    </p:column>
+                    <p:column headerText="UZD termin" style="width: 50px; text-align: center;" sortBy="#{itemik.ulganazledlugidatapierwsza}" sortable="true">
+                         <h:outputText value="#{itemik.ulganazledlugidatapierwsza}" style="color: blue;"/>
+                    </p:column>
+                    <p:column headerText="UZD zapłata" style="width: 50px; text-align: center;" sortBy="#{itemik.ulganazledlugidatadruga}"  sortable="true">
+                        <h:outputText value="#{itemik.ulganazledlugidatadruga}" style="color: green;"/>
                     </p:column>
                 </p:dataTable>
             </p:tab>
