--- a/npkpir_23/web/ksiegowa/ksiegowaIndex.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaIndex.xhtml
@@ -32,9 +32,9 @@
                 <f:view>
 
                     <pe:layout fullPage="true" >
-                        <ui:include src="sub/layoutIndex/north.xhtml"/>  <!-- panel polnocny-->
+                        <ui:include src="sub/layoutZmianapodatnika/north.xhtml"/>  <!-- panel polnocny-->
                         <ui:include src="sub/layoutZmianapodatnika/south.xhtml"/>   <!-- panel poludniowy-->
-                        <ui:include src="sub/layoutIndex/west.xhtml"/>   <!-- panel zachodni-->
+                        <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
                         <ui:include src="sub/layoutZmianapodatnika/east.xhtml"/>   <!-- panel wchodni-->
                         <pe:layoutPane position="center">
                             
